# hawkeye

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  config.py  deps.py  main.py
backend/app/api/: alerts.py  employees.py  graph.py  health.py  narrative.py  replay.py  scoring.py
backend/app/consumers/: event_consumer.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/scripts/: seed_if_empty.py
backend/app/services/: feature_aggregator.py  graph_service.py  narrative.py  replay.py  scoring.py
backend/app/ws/: alerts.py
backend/artifacts/: .gitignore
backend/data/: .gitignore
backend/prompts/: investigation_narrative.md
backend/tests/: test_basic.py
deploy/: bootstrap-vps.sh  deploy.sh  github-actions-key.pub.example  wait-for-stack.sh
docs/: PITCH_NOTES.md  SECURITY.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: AlertFeed.tsx  (+4 more)
infra/kafka/: create-topics.sh
infra/keycloak/: realm-export.json
infra/neo4j/: init.cypher
infra/nginx/: README.md  hawkeye.nineagents.in.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: download-artifacts.ps1  download-artifacts.sh
(+5 files in other folders)
